# AI_Knowledge_Assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  start.sh
data/predictions/: answer_predictions.csv  feedback_predictions.csv  feedback_predictions_multitask.csv
docs/: README.md
notebooks/: exploration.ipynb  feedback_classification_baseline.ipynb  feedback_classification_transformer.ipynb
src/: __init__.py
src/api/: __init__.py  app.py
src/api/routes/: endpoints.py  schemas.py
src/classification/: README.md  __init__.py  feedback_classifier.py
src/config/: __init__.py  prompts.py  settings.py
src/generation/: __init__.py  answer_generator.py  context_builder.py  query_analyzer.py  rag_pipeline.py  rag_pipeline_new.py
src/ingestion/: __init__.py  chunker.py  pdf_parser.py  pipeline.py  summarizer.py
src/retrieval/: __init__.py  bm25_handler.py  embedder.py  hybrid_retriever.py  jina_reranker.py  langchain_retriever.py  reranker.py  vector_store.py
src/utils/: helpers.py  logger.py
tests/: debug_pipeline.py  generate_predictions.py  test_rag_pipeline.py
